<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btnFillData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fill_data"
            app:layout_constraintTop_toTopOf="parent"/>
        <Button
            android:id="@+id/btnStatistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            app:layout_constraintTop_toBottomOf="@id/btnFillData"/>
        <Button
            android:id="@+id/btnUserActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_activity"
            app:layout_constraintTop_toBottomOf="@id/btnStatistics"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>